src/test/resources/errors/duplicate.jd
justification dupli_diag {
    evidence e is "An evidence"
    strategy s is "a Strategy"
    conclusion c is "a Conclusion"
    e supports s
    s supports c
}

justification dupli_diag {
    evidence e is "An evidence"
    strategy s is "a Strategy"
    conclusion c is "a Conclusion"
    e supports s
    s supports c
}
